# ai-dojo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: pre-commit.yml  tests.yml
.mekara/scripts/: __init__.py
.mekara/scripts/compiled/: sync_help.py
.mekara/scripts/nl/: rebase-and-retag.md  sync-help.md
docs/: index.md
docs/api/: index.md
docs/code-base/: documentation.md  dojo.md  index.md
docs/development/: index.md  workflows.md
docs/guide/: index.md
docs/usage/: index.md
src/dojo/: __init__.py  cli.py
tests/: test_sanity.py
