[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dojo"
version = "0.1.0"
description = "Dojo - A Python CLI tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dojo = "dojo.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "ruff>=0.14.9",
]
